--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
 	"keywords": ["auth", "typescript", "react", "jwt"],
 	"license": "MIT",
 	"homepage": "https://github.com/callumk7/alligator-auth",
+	"main": "dist/index.js",
 	"scripts": {
 		"build": "tsc",
-		"ci": "pnpm build && pnpm check",
+		"ci": "pnpm build && pnpm check && pnpm check-exports",
+		"check-exports": "attw --pack . --ignore-rules=cjs-resolves-to-esm",
 		"check": "biome check",
 		"lint": "biome check --write"
 	},
@@ -22,6 +24,7 @@
 	"files": ["dist"],
 	"type": "module",
 	"devDependencies": {
+		"@arethetypeswrong/cli": "^0.17.3",
 		"@biomejs/biome": "^1.9.4",
 		"typescript": "^5.7.3"
 	}
