--- a/package.json
+++ b/package.json
@@ -2,12 +2,7 @@
 	"name": "alligator-auth",
 	"version": "0.1.1",
 	"description": "Utilities and wrappers for interacting with my self hosted auth server.",
-	"keywords": [
-		"auth",
-		"typescript",
-		"react",
-		"jwt"
-	],
+	"keywords": ["auth", "typescript", "react", "jwt"],
 	"license": "MIT",
 	"homepage": "https://github.com/callumk7/alligator-auth",
 	"main": "dist/index.js",
@@ -26,13 +21,13 @@
 		"type": "git",
 		"url": "git+https://github.com/callumk7/alligator-auth.git"
 	},
-	"files": [
-		"dist"
-	],
+	"files": ["dist"],
 	"type": "module",
 	"devDependencies": {
 		"@arethetypeswrong/cli": "^0.17.3",
 		"@biomejs/biome": "^1.9.4",
+		"@types/react": "^19.0.4",
+		"react": "^18.3.1",
 		"typescript": "^5.7.3"
 	}
 }
