--- a/package.json
+++ b/package.json
@@ -2,12 +2,7 @@
 	"name": "alligator-auth",
 	"version": "0.1.2",
 	"description": "Utilities and wrappers for interacting with my self hosted auth server.",
-	"keywords": [
-		"auth",
-		"typescript",
-		"react",
-		"jwt"
-	],
+	"keywords": ["auth", "typescript", "react", "jwt"],
 	"license": "MIT",
 	"homepage": "https://github.com/callumk7/alligator-auth",
 	"main": "dist/index.js",
@@ -26,9 +21,7 @@
 		"type": "git",
 		"url": "git+https://github.com/callumk7/alligator-auth.git"
 	},
-	"files": [
-		"dist"
-	],
+	"files": ["dist"],
 	"type": "module",
 	"devDependencies": {
 		"@arethetypeswrong/cli": "^0.17.3",
