--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
 	"name": "alligator-auth",
-	"version": "0.1.2",
+	"version": "0.1.3",
 	"description": "Utilities and wrappers for interacting with my self hosted auth server.",
-	"keywords": ["auth", "typescript", "react", "jwt"],
+	"keywords": [
+		"auth",
+		"typescript",
+		"react",
+		"jwt"
+	],
 	"license": "MIT",
 	"homepage": "https://github.com/callumk7/alligator-auth",
 	"main": "dist/index.js",
@@ -21,7 +26,9 @@
 		"type": "git",
 		"url": "git+https://github.com/callumk7/alligator-auth.git"
 	},
-	"files": ["dist"],
+	"files": [
+		"dist"
+	],
 	"type": "module",
 	"devDependencies": {
 		"@arethetypeswrong/cli": "^0.17.3",
